Fri Sep 12 11:14:14 2014  Jiri (George) Lebl <jirka@5z.com>

	* examples/peano.gel: Add peano example in polar

Tue Sep 09 10:08:38 2014  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: fixes in help/error texts.  Thanks to Marek
	  Černocký

Sat Sep 06 10:24:33 2014  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.gel: fix New Program crash

	* examples/easy-matrix-examples.gel, examples/rsa.gel: Add
	  code for creating nice classroom examples for easily hand
	  computable RREF and eigenvalues, and add an example of computing
	  an RSA key and encryption/decryption with it

Fri Sep 05 21:20:02 2014  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: Add PlotWindowPresent

	* examples/*.gel: use the PlotWindowPresent function

	* help/C/genius.xml: document the function

Fri Sep 05 20:46:23 2014  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c, src/examples.[ch]: rename tutorials to examples
	  I really like that wording bettter

	* tutors -> examples: move all the files

	* configure.in, Makefile.am: move to examples 

Fri Sep 05 17:47:03 2014  Jiri (George) Lebl <jirka@5z.com>

	* tutors/fourier*.gel: add some fourier series tutors

Fri Sep 05 15:25:28 2014  Jiri (George) Lebl <jirka@5z.com>

	* tutors/*: Add whole bunch of tutorials from what I've been using
	  in classes (those that weren't a mess)

Fri Sep 05 13:01:51 2014  Jiri (George) Lebl <jirka@5z.com>

	* src/tutors.c: sort the tutors by category and then name.

Fri Sep 05 12:56:05 2014  Jiri (George) Lebl <jirka@5z.com>

	* tutors/*.gel: Add a few more tutorials (lorenz, finite difference
	  method, standing waves)

Fri Sep 05 11:20:20 2014  Jiri (George) Lebl <jirka@5z.com>

	* tutors/cantor.gel: Add Cantor's staircase tutorial

Fri Sep 05 01:52:10 2014  Jiri (George) Lebl <jirka@5z.com>

	* tutors/*: add a simple strange-attractor tutorial

	* src/tutors.[ch], src/gnome-genius.c: add a tutorials menu
	  to load same programs, Right now really simple, eventually should