@@ -7,6 +7,7 @@ Changes to 1.0.19
 * New plotting functions: SurfacePlotDrawLine, SurfacePlotDrawPoints,
   SurfacePlotClear, PlotWindowPresent
 * New rotation animation in the surface plot window
+* Fix string constants from compiled library starting with 'E' (funky bug)
 * A few fixes
 
 * During making of these changes the author (Jiri) was partially supported by
